fixed vertical scroll on mobile

--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -108,6 +108,11 @@ html {
 
 @media (max-width: 550px) {
     
+    body {
+        max-height: 100vh;
+        overflow-y: hidden;
+    }
+
     .wrapper {
         width: 350px;
     }
